classDiagram
    direction LR

    class AuthenticationController {
      +Register(CreateUserDto)
      +Login(UserLoginDto)
      +RefreshToken(TokenDto)
    }

    class StudyGoalController {
      +GetStudyGoalById(Guid)
      +Create(CreateStudyGoalDto)
      +GetAllStudyGoals()
      +GetCompletedStudyGoals()
      +CompleteAndRemoveStudyGoal(Guid)
    }

    class MilestoneController {
      +GetMilestoneByStudyGoalId(Guid)
      +AddMilestone(CreateMilestoneDto)
      +UpdateMilestone(UpdateMilestoneStatusDto)
      +TrackMilestoneStudyTime(Guid, TrackMilestoneStudyTimeDto)
    }

    class StudySessionPlanController {
      +GetMilestoneByStudyGoalId(Guid)
      +AddCreateStudySessionPlan(CreateStudySessionPlanDto)
    }

    class UserController {
      +GetUserById(Guid)
      +Create(CreateUserDto)
    }

    class IAuthenticationRepository {
      <<interface>>
      +Registration(CreateUserDto)
      +Login(UserLoginDto)
      +VerifyToken(TokenDto)
    }

    class IStudyGoalRepository {
      <<interface>>
      +GetByIdAsync(Guid, Guid)
      +GetAllAsync(Guid)
      +GetCompletedAsync(Guid)
      +AddAsync(CreateStudyGoalDto)
      +CompleteAndRemoveAsync(Guid, Guid)
    }

    class IMilestoneRepository {
      <<interface>>
      +GetByStudyGoalIdAsync(Guid, Guid)
      +AddAsync(CreateMilestoneDto, Guid)
      +UpdateAsync(UpdateMilestoneStatusDto, Guid)
      +AddTrackedSessionAsync(Guid, int, Guid)
    }

    class IStudySessionPlanRepository {
      <<interface>>
      +GetByStudyGoalIdAsync(Guid)
      +AddAsync(CreateStudySessionPlanDto)
    }

    class IUserRepository {
      <<interface>>
      +GetByIdAsync(Guid)
      +AddAsync(CreateUserDto)
    }

    class AuthenticationRepository
    class StudyGoalRepository
    class MilestoneRepository
    class StudySessionPlanRepository
    class UserRepository

    class NoterDbContext {
      +DbSet~User~ Users
      +DbSet~StudyGoal~ StudyGoals
      +DbSet~Milestone~ Milestones
      +DbSet~StudySessionPlan~ StudySessionPlans
      +DbSet~StudySession~ StudySessions
      +DbSet~LearningTimer~ LearningTimers
      +DbSet~Reminder~ Reminders
      +DbSet~RefreshToken~ RefreshTokens
    }

    class User {
      +Guid Id
      +string Email
      +string HashPassword
      +ICollection~StudyGoal~ Goals
    }

    class StudyGoal {
      +Guid Id
      +string Title
      +string Description
      +GoalType Type
      +DateTime StartDate
      +DateTime EndDate
      +GoalStatus Status
      +Guid UserId
      +MarkAsCompleted()
    }

    class Milestone {
      +Guid Id
      +Guid StudyGoalId
      +string Title
      +DateTime DueDateTime
      +DateTime StartDateTime
      +DateTime EndDateTime
      +GoalStatus Status
      +ICollection~StudySessionPlan~ StudySessionPlans
    }

    class StudySession {
      +Guid Id
      +Guid UserId
      +Guid? GoalId
      +DateTime StartTime
      +DateTime EndTime
      +int DurationMinutes
    }

    class StudySessionPlan {
      +Guid Id
      +DateTime PlannedStart
      +int PlannedMinutes
      +SessionStatus Status
      +Guid MilestoneId
    }

    class RefreshToken {
      +Guid Id
      +Guid UserId
      +string Token
      +string JwtId
      +bool IsUsed
      +bool IsRevoked
      +DateTime ExpiryDate
    }

    class LearningTimer {
      +Guid Id
      +DateTime StartedAt
      +DateTime? StoppedAt
      +TimerState State
    }

    class Reminder {
      +Guid Id
      +Guid UserId
      +string Message
      +DateTime ReminderTime
      +bool IsSent
    }

    class GoalStatus {
      <<enumeration>>
      Planned
      InProgress
      Completed
      Failed
    }

    class GoalType {
      <<enumeration>>
      Module
      Exam
      Project
      Assignment
      Other
    }

    class SessionStatus {
      <<enumeration>>
      Planned
      Completed
      Missed
    }

    class TimerState {
      <<enumeration>>
      Running
      Paused
      Stopped
    }

    AuthenticationController --> IAuthenticationRepository
    StudyGoalController --> IStudyGoalRepository
    MilestoneController --> IMilestoneRepository
    StudySessionPlanController --> IStudySessionPlanRepository
    UserController --> IUserRepository

    AuthenticationRepository ..|> IAuthenticationRepository
    StudyGoalRepository ..|> IStudyGoalRepository
    MilestoneRepository ..|> IMilestoneRepository
    StudySessionPlanRepository ..|> IStudySessionPlanRepository
    UserRepository ..|> IUserRepository

    AuthenticationRepository --> NoterDbContext
    StudyGoalRepository --> NoterDbContext
    MilestoneRepository --> NoterDbContext
    MilestoneRepository --> IStudyGoalRepository
    StudySessionPlanRepository --> NoterDbContext
    UserRepository --> NoterDbContext

    NoterDbContext --> User
    NoterDbContext --> StudyGoal
    NoterDbContext --> Milestone
    NoterDbContext --> StudySessionPlan
    NoterDbContext --> StudySession
    NoterDbContext --> RefreshToken
    NoterDbContext --> LearningTimer
    NoterDbContext --> Reminder

    User "1" --> "0..*" StudyGoal : owns
    User "1" --> "0..*" RefreshToken : has
    StudyGoal "1" --> "0..*" Milestone : contains
    Milestone "1" --> "0..*" StudySessionPlan : plans
    Milestone "1" --> "0..*" StudySession : tracked in GoalId

    StudyGoal --> GoalType
    StudyGoal --> GoalStatus
    Milestone --> GoalStatus
    StudySessionPlan --> SessionStatus
    LearningTimer --> TimerState
